完成了文件上传功能

--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+pymysql://arvin:pengyu2408@127.0.0.1:3306/nexus-ai?charset=utf8mb4
+sqlalchemy.url = mysql+pymysql://root:nexus123@localhost:3307/nexus_ai?charset=utf8mb4
 
 
 [post_write_hooks]
